<resources>
    <string name="app_name">CONNECTadora</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="fr">Français</string>
    <string name="eng">English</string>
    <string name="esp">Español</string>


    <string name="aide">Aide</string>
    <string name="condition">Conditions d\'utilisation</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_title">Messages</string>

    <string name="conditions">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim
        ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt
        in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="mdpoublie">Si votre numéro est associé à un
        compte, le mot de passe temporaire sera envoyé par SMS à votre numéro
        de téléphone sous peu.</string>

</resources>