<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitiy_interest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A21F3FF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.CONNECTadora.LoginActivity">

    <Button
        android:id="@+id/b_condition"
        android:layout_width="237dp"
        android:layout_height="41dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/condition"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/b_aide"
        android:layout_width="127dp"
        android:layout_height="43dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/aide"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#009688"
        android:textColorLink="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <EditText
        android:id="@+id/courriel"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/tv_createAcc"
        android:layout_width="272dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-black"
        android:text="CONNECTadora"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:backgroundTint="#009688"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_connexion"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:backgroundTint="#009688"
        android:text="@string/Inscription"
        app:layout_constraintBottom_toTopOf="@+id/b_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/b_forgetPass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="212dp"
        android:layout_height="61dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="Mot de passe oublié?"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#009688"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414"
        app:strokeColor="#00FFFFFF" />

    <TextView
        android:id="@+id/message_inscrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pas encore inscrit?"
        app:layout_constraintBottom_toTopOf="@+id/b_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_login"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/b_fr"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginEnd="252dp"
        android:backgroundTint="#EAFFFD"
        android:text="@string/fr"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/b_esp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_condition"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/b_eng"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:backgroundTint="#EAFFFD"
        android:text="@string/eng"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_condition"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/b_esp"
        android:layout_width="117dp"
        android:layout_height="42dp"
        android:backgroundTint="#EAFFFD"
        android:text="@string/esp"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_aide"
        app:layout_constraintVertical_bias="0.486" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="180dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@drawable/ic_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>